Drop old logo clipping hack, fix border flash on game start. 🎉

--- a/src/css/aa-game-menu.css
+++ b/src/css/aa-game-menu.css
@@ -105,10 +105,8 @@ body:not(.is_firefox) #game-menu-wrapper {
   display: block;
   width: 100%;
   margin: 0 auto;
-  /* prevent bottom "r" from being clipped, ugh. */
-  padding-bottom: calc(2px * var(--gs));
-  /* offset the above. */
-  margin-top: -calc(1px * var(--gs));
+  /* hackish: hide flashing overflow bits when transforming in */
+  border: 1px solid #000;
   overflow: hidden;
 }
 
